Update to new /sys/class

This updates fan and thermal to the new /sys/class API, but doesn't
update the battery stuff yet

BUG:262654